[gd_scene load_steps=7 format=2]

[ext_resource path="res://BADABB__.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://Interfaz.gd" type="Script" id=2]
[ext_resource path="res://Sonidos/BotonMusica.wav" type="AudioStream" id=3]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 90
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[node name="Interfaz" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -51.0
margin_right = 51.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "0
"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mensaje" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -239.5
margin_top = -171.5
margin_right = 239.5
margin_bottom = 125.5
custom_fonts/font = SubResource( 2 )
text = "X en el espacio

"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BotonJugar" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -89.5
margin_top = -120.0
margin_right = 89.5
margin_bottom = -23.0
custom_fonts/font = SubResource( 3 )
text = "Jugar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MensajeTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="MusicaBoton" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
[connection signal="pressed" from="BotonJugar" to="." method="_on_BotonJugar_pressed"]
[connection signal="timeout" from="MensajeTimer" to="." method="_on_MensajeTimer_timeout"]
